# moa-gateway-pro

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARK_REPORT.md  BUG_HUNT_REPORT.md  BUG_HUNT_REPORT_V2.md  CHANGELOG.md  CODE_REVIEW_SUBAGENT_A.md  CONTRIBUTING.md  DEPLOYMENT.md  DUAL_AI_AUDIT_REPORT.md  Dockerfile  INTEGRATION_GUIDE.md  LICENSE  LONG_PROJECT_PLAN.md  PERFORMANCE_BASELINE.json  PERFORMANCE_BASELINE.md  README.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.7.md  RELEASE_NOTES_v1.8.md  SCAN_REPORT.md  TEST_REVIEW_SUBAGENT_B.md  _check_desc.py  _clean_req.py  _dedup2.py  _dedup_body.py  _gen_descriptions.py  _git_commit.py  _git_commit2.py  _git_commit3.py  _git_commit4.py  _git_commit5.py  _git_commit6.py  _git_squash.py  _list_releases.py  _patch_request.py  _release_v18.py  (+66 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
.moai/state/: in_flight.json
benchmarks/: config.py  report.py  run_benchmark.py  runner.py
benchmarks/scenarios/: admin.py  auth.py  chat.py  health.py  models.py
deploy/: alerts.yml  prometheus.yml
deploy/database/: docker-compose.postgres.yml  postgres.env.example
deploy/ha/: .env.example  Dockerfile.backend  docker-compose.ha.yml  sla_config.yaml
deploy/monitoring/: alert_rules.yaml  grafana_dashboard.json
docs/: 01-overview.md  02-architecture.md  03-quickstart.md  04-api-reference.md  05-agent-integration.md  06-moa-deep-dive.md  07-faq.md  08-ui-architecture.md  09-auth-auto-fallback.md  AUDIT-REPORT.md  audit-stability-r3.md
moa_gateway/: __init__.py  adapters.py  audit.py  auth.py  benchmark.py  bootstrap.py  config.py  database.py  mcp_server.py  moa.py  model_pool.py  observability.py  prompts.py  ratelimit.py  rbac.py  req_models.py  router.py  server.py  storage.py
moa_gateway/agent_loop/: base.py  harness.py  plan_execute_loop.py  react_loop.py
moa_gateway/benchmark/: benchmark_engine.py  capability_probe.py  metrics_store.py
moa_gateway/cache/: base.py  config.py  exact.py  manager.py  metrics.py  redis_cache.py  semantic.py
moa_gateway/capability/: __init__.py  acceptance.py  action_audit.py  action_policy.py  anthropic_compat.py  artifact.py  audit_cache.py  auto_converge.py  brainstorm.py  bubble_mode.py  channels.py  checkpoint.py  config_stack.py  conflict_arbiter.py  consensus.py  consumption_intel.py  context_clean.py  convergent_detector.py  cost_estimator.py  cross_iter_synth.py  distillation.py  elo_ranking.py  embedding.py  feedback_loop.py  flask_score.py  frozen_zone.py  fuzzy_dedup.py  gate_l0.py  goal_eval.py  grace_window.py  hook_events.py  importance.py  in_flight.py  input_fingerprint.py  llm_merge.py  meta_prompt.py  moa_engine.py  moaflow.py  model_context_db.py  model_entry.py  (+33 more)
moa_gateway/cli/: ai_suggest.py  chat_repl.py  main.py
moa_gateway/compliance/: audit_integrity.py  baseline_check.py  config.py  data_retention.py  encryption.py  gdpr.py  key_rotation.py  pii_detector.py
moa_gateway/discovery/: auto_configurator.py  discovery_engine.py  free_model_catalog.py  scheduler.py
moa_gateway/ha/: circuit_breaker.py  failover.py  graceful.py  health.py  retry.py
moa_gateway/health/: health_checker.py  probe_engine.py  purge_manager.py
moa_gateway/mcp/: builtin_tools.py  client.py  external_registry.py  guardrails.py  protocol.py  registry.py  server.py  transport.py
moa_gateway/migrations/: env.py
perf/: README.md  bench.py  chaos.py  init_key.py  integration_e2e.py  osv_scan.py  prom_scrape.py  redis_smoke.py  webhook_smoke.py
proxy/: Dockerfile  README.md  auth.go  config.go  go.mod  handler.go  health.go  main.go  metrics.go  middleware.go  pool.go  ratelimit.go  streaming.go
reports/: v1_8_1_code_review.md
scripts/: _add_agg_from_dict.py  _add_from_dict.py  _check_pool.py  _check_rl.py  _dbg_canary.py  _dbg_patch.py  _dbg_quota.py  _find_rl.py  _fix_500_to_4xx.py  _fix_dup_except.py  _fix_patch_order.py  _fix_raise_from.py  _list_webui.py  _p0_2_fix.py  _p0_9_10_fix.py  _patch_38.py  _patch_4xx.py  _patch_4xx_chain.py  _remove_dup_block.py  _verify_w11.py  _write_mx.py  audit_ui_e2e.py  check_models.py  debug_bench.py  debug_popen.py  debug_popen2.py  debug_preset_detail.py  debug_presets.py  deep_e2e_run.txt  diag_4endpoints.py  fix_auth.py  fix_http_auth.py  fix_http_token.py  fix_lambda_threading.py  fix_server_runner.py  fix_sr_loop.py  gen_prompts.py  list_keys.py  list_keys2.py  list_keys3.py  (+42 more)
tests/: test_moa_strategies.py  test_self_heal.py  test_smoke.py  test_watchdog.py
(+196 files in other folders)
